syntax = "proto3";
package main;
option go_package = "./command";

message Command {
	int32 CommandType = 1;
    int32 FromAddress = 2;
    int32 ToAddress = 3;
    int32 Amount = 4;
    int64 RequestId = 5;
}